[package]
name = "dzl"
version = "0.2.0"
authors = ["砸松果 <zasongguo@outlook.com>"]
edition = "2021"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/za-songguo/dzl"
description = "A crate for logging. It is simple and easy to use :)"
keywords = ["logging", "log"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "0.3.13", features = ["local-offset"] }
termcolor = "1.1.3"
serde = { version = "1.0.143", features = ["derive"] }
toml = "0.5.9"
thiserror = "1.0.37"
